--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,5 +6,10 @@ jobs:
     name: Tests
     runs-on: ubuntu-18.04
     steps:
+      - name: Install Clojure CLI
+        run: |
+          curl -O https://download.clojure.org/install/linux-install-1.10.1.536.sh
+          chmod +x linux-install-1.10.1.536.sh
+          sudo ./linux-install-1.10.1.536.sh
       - name: Unit Tests
         run: clj -A:ci-tests
