--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,7 @@ jobs:
     steps:
       - name: Install Clojure CLI
         run: |
+          sudo apt-get install -y rlwrap
           curl -O https://download.clojure.org/install/linux-install-1.10.1.536.sh
           chmod +x linux-install-1.10.1.536.sh
           sudo ./linux-install-1.10.1.536.sh
