--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,5 +12,6 @@ jobs:
           curl -O https://download.clojure.org/install/linux-install-1.10.1.536.sh
           chmod +x linux-install-1.10.1.536.sh
           sudo ./linux-install-1.10.1.536.sh
+      - uses: actions/checkout@v2
       - name: Unit Tests
         run: clj -A:ci-tests
